--- a/Escuela/Site.Master
+++ b/Escuela/Site.Master
@@ -47,13 +47,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Nombre de la aplicación</a>
+                    <a class="navbar-brand" runat="server" href="~/Facultades/facultad_s.aspx">Facultades</a>
+					<a class="navbar-brand" runat="server" href="~/Alumnos/alumno_s.aspx">Alumnos</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Inicio</a></li>
-                        <li><a runat="server" href="~/About">Acerca de</a></li>
-                        <li><a runat="server" href="~/Contact">Contacto</a></li>
+                        <li><a runat="server" href="~/Facultades/facultad_i.aspx">Alta facultades</a></li>
+						<li><a runat="server" href="~/Alumnos/alumno_i.aspx">Alta Alumnos</a></li>
                     </ul>
                 </div>
             </div>
@@ -63,7 +63,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
+                <p>&copy; <%: DateTime.Now.Year %> - ESCUELA by:Jose Alvarez ASP.NET</p>
             </footer>
         </div>
 
